Commit after UI change to Deemsys logo

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1426,6 +1426,7 @@ pre code {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  padding-top:7px;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
@@ -2114,7 +2115,7 @@ th {
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #ddd;
+  border: 1px solid #A79F9F;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
@@ -2390,6 +2391,7 @@ fieldset[disabled] .form-control {
   cursor: not-allowed;
   background-color: #eee;
   opacity: 1;
+  
 }
 textarea.form-control {
   height: auto;
@@ -2695,6 +2697,7 @@ select[multiple].input-lg {
   padding-top: 4px;
   margin-top: 0;
   margin-bottom: 0;
+  margin-left: 0;
 }
 .form-horizontal .radio-inline{
     padding-top: 7px;
@@ -2711,8 +2714,8 @@ select[multiple].input-lg {
   min-height: 27px;
 }
 .form-horizontal .form-group {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: -50px;
+  margin-left: 40px;
 }
 @media (min-width: 768px) {
   .form-horizontal .control-label {
@@ -2784,12 +2787,16 @@ fieldset[disabled] .btn {
   opacity: .65;
 }
 .btn-default {
-  color: #333;
-  background-color: #fff;
-  border-color: #ccc;
+  color: #000;
+  background-color: #D3D3D3;
+  border-color: #D3D3D3;
 }
 .btn-default:hover,
-.btn-default:focus,
+.btn-default:focus{
+   color: #000;
+  background-color: #BEBEBE;
+  border-color: #BEBEBE;
+}
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
@@ -3443,7 +3450,7 @@ tbody.collapse.in {
 .input-group[class*="col-"] {
   float: none;
   padding-right: 0;
-  padding-left: 0;
+  padding-left: 18px;
 }
 .input-group .form-control {
   position: relative;
@@ -3521,8 +3528,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 1;
   color: #555;
   text-align: center;
-  background-color: #eee;
-  border: 1px solid #ccc;
+  background-color: #49C0F0;
+  border: 1px solid #49C0F0;
   border-radius: 4px;
 }
 .input-group-addon.input-sm {
@@ -4358,8 +4365,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li > span:hover,
 .pagination > li > a:focus,
 .pagination > li > span:focus {
-  color: #2a6496;
-  background-color: #eee;
+  color: #0A1824;
+  background-color: #A9A9A9;
   border-color: #ddd;
 }
 .pagination > .active > a,
@@ -4371,8 +4378,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #000061;
-  border-color: #000061;
+  background-color: #49C0F0;
+  border-color: #49C0F0;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
