--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,68 @@ body {
   color: #252020;
   background: #FFFFFF;
 }
+.checkbox input:disabled+i{
+    outline: none !important;
+ background-color: gray;
+  border-color: #CCC !important;
+  box-shadow: none !important;
+  color: #000;
+  opacity: 0.4 !important;
+  cursor: default;
+  height: 14px;
+  width: 14px;
+}
+
+.checkbox-inline input:disabled+i{
+  outline: none !important;
+   background-color: gray;
+  border-color: #CCC !important;
+  box-shadow: none !important;
+  color: #000;
+  opacity: 0.4 !important;
+  cursor: default;
+   height: 14px;
+  width: 14px;
+}
+li.sub-menu-sub a:hover, li.sub-menu-sub a:focus {
+    background-color: rgba(17, 116, 158, 0.96);
+    color: #fff;
+    margin-left: -30px;
+    padding-left: 30px;
+    display: block;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+ul.sidebar-menu li.sub-menu ul.sub li.sub-menu-sub ul.sub-sub a:hover {
+    background-color: transparent;
+    color: #fff;
+    margin-left: -60px;
+    padding-left: 60px;
+    display: block;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+ul.sidebar-menu li.sub-menu ul.sub li.sub-menu-sub a:hover {
+    background-color: rgba(17, 116, 158, 0.96);
+    color: #fff;
+    margin-left: -60px;
+    padding-left: 60px;
+    display: block;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
 
 ul li {
     list-style: none;
@@ -33,7 +95,7 @@ a, a:hover, a:focus {
 }
 ::selection {
 
-    background: #000061;
+    background: #24789A;
     color: #fff;
 }
 ::-moz-selection {
@@ -48,7 +110,7 @@ a, a:hover, a:focus {
 
 /* Bootstrap Modifications */
 .modal-header {
-	background: #000061;
+	background: #49C0F0;
 }
 
 .modal-title {
@@ -226,7 +288,7 @@ ul.top-menu > li > .logout
 	border: 1px solid #315B6F !important;
 	padding: 5px 15px;
 	margin-right: 15px;
-	background: #2070AF;
+	background: #E2462B;
 	margin-top: 15px;
 }
 /*sidebar navigation*/
@@ -235,7 +297,7 @@ ul.top-menu > li > .logout
     width: 210px;
     height: 100%;
     position: fixed;
-    background: #000061  url(../img/devoops_pattern_b10.png) 0 0 repeat;
+    background: #085675  url(../img/devoops_pattern_b10.png) 0 0 repeat;
 }
 
 #sidebar h5 {
@@ -299,7 +361,7 @@ ul.sidebar-menu {
 }
 
 ul.sidebar-menu li ul.sub li{
-    background: #40409E;
+    background: #1A84B1;
     margin-bottom: 0;
     margin-left: 0;
     margin-right: 1;
@@ -308,6 +370,10 @@ ul.sidebar-menu li ul.sub li{
 ul.sidebar-menu li ul.sub li:last-child{
     border-radius: 0 0 4px 4px;
     -webkit-border-radius: 0 0 4px 4px;
+}
+ul.sub li.sub-menu-sub ul.sub li a:hover{
+    color: white;
+    background: transparent;
 }
 
 ul.sidebar-menu li ul.sub li a {
@@ -320,7 +386,20 @@ ul.sidebar-menu li ul.sub li a {
     -o-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
-    color: #aeb2b7;
+    color: #D1D6DC;
+}
+ul.sub li.sub-menu-sub a.active{
+    background-color: rgba(17, 116, 158, 0.96);
+    color: #fff;
+    margin-left: -30px;
+    padding-left: 30px;
+    display: block;
+
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 ul.sidebar-menu li ul.sub li a:hover {
@@ -329,27 +408,47 @@ ul.sidebar-menu li ul.sub li a:hover {
 }
 
 ul.sidebar-menu li ul.sub li.active a {
-    color: #FFFFFF;
+  /*  color: #FFFFFF;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
     display: block;
-}
+    background-color: #428bca;*/
+    margin-left: -32px;
+    padding-left:32px;
+      border:1px solid #15aeec; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; text-decoration:none; display:block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+ background-color: #49c0f0; background-image: -webkit-gradient(linear, left top, left bottom, from(#49c0f0), to(#2CAFE3));
+ background-image: -webkit-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: -moz-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: -ms-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: -o-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: linear-gradient(to bottom, #49c0f0, #2CAFE3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#49c0f0, endColorstr=#2CAFE3);
+
+   }
 
 ul.sub li.sub-menu-sub ul.sub li.active a{
- color: #FFFFFF;
+ /*color: #FFFFFF;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
     display: block;
-}
-ul.sub li.sub-menu-sub ul.sub li a:hover{
-color: white;
-    background: transparent;
+     background-color: #428bca;
+    margin-left: -62px;
+    padding-left:62px;*/
+     margin-left: -62px;
+    padding-left:62px;
+     border:1px solid #15aeec; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; text-decoration:none; display:block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
+ background-color: #49c0f0; background-image: -webkit-gradient(linear, left top, left bottom, from(#49c0f0), to(#2CAFE3));
+ background-image: -webkit-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: -moz-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: -ms-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: -o-linear-gradient(top, #49c0f0, #2CAFE3);
+ background-image: linear-gradient(to bottom, #49c0f0, #2CAFE3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#49c0f0, endColorstr=#2CAFE3);
+
 }
 
 ul.sidebar-menu li{
@@ -382,7 +481,7 @@ ul.sidebar-menu li a{
 }
 
 ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
-    background: #00003A;
+    background: #109BC3;
     color: #fff;
     display: block;
 
@@ -393,19 +492,6 @@ ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:fo
     transition: all 0.3s ease;
 }
 
-ul.sub li.sub-menu-sub a.active, ul.sub li.sub-menu-sub a:hover, ul.sub li.sub-menu-sub a:focus {
-    background: rgba(170, 179, 216, 0.35);
-    color: #fff;
-    margin-left: -30px;
-    padding-left: 30px;
-    display: block;
-
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
 
 ul.sidebar-menu li a i {
     font-size: 15px;
@@ -445,8 +531,8 @@ ul.sidebar-menu li a.active i {
 }
 
 .black-bg {
-    background: #E4E4F1;
-    border-bottom: 1px solid #5A564D;
+    background: #49c0f0;
+    border-bottom: 1px solid #5667CE;
 }
 
 .wrapper {
@@ -465,6 +551,30 @@ a.logo {
     float: left;
     margin-top: 15px;
     text-transform: uppercase;
+    /* text-shadow: 0 -3px 0 #ccc,
+      0 0px 0 #c9c9c9, 
+      0 -4px 0 #bbb,
+       0 0px 0 #b9b9b9, 
+       0 0px 0 #aaa, 
+       0 0px 1px rgba(0,0,0,.1), 
+       0 0 5px rgba(0,0,0,.1), 
+       0 0px 10px rgba(0,0,0,.3), 
+       0 0px 0px rgba(0,0,0,.2), 
+       0 0px 10px rgba(0,0,0,.25), 
+       0 10px 10px rgba(0,0,0,.2), 
+       0 9px 20px rgba(0,0,0,.15);*/
+        text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
 
 a.logo b {
@@ -511,7 +621,7 @@ ul.top-menu > li > a {
 
 ul.top-menu > li > a:hover, ul.top-menu > li > a:focus {
     border:1px solid #b6b6b6 !important;
-    background-color: #2070AF !important;
+    background-color: #E2462B !important;
     border-color: #b6b6b6 !important;
     text-decoration: none;
     border-radius: 4px;
@@ -1770,8 +1880,8 @@ background: #fffbcc !important;
 .form-panel {
 	
 	margin: 10px;
-	padding: 1px;
-    border: 1px solid #3931C5;
+	padding: 0px;
+    border: 1px solid #428bca;
     box-shadow: 0 0 4px #D8D8D8;
     background: transparent;
     margin-bottom: 20px;
@@ -1976,7 +2086,7 @@ label {
 	margin: 0;
 	padding: 25px 20px;
 	text-align: center;
-	background: #00003A;
+	background: #49C0F0;
 	border-radius: 5px 5px 0 0;
 	-webkit-border-radius: 5px 5px 0 0;
 	color: #fff;
@@ -2284,12 +2394,12 @@ label {
   -webkit-border-radius: 3px 3px 0 0;
   -moz-border-radius: 3px 3px 0 0;
   border-radius: 3px 3px 0 0;
-  color: #00003A;
+  color: #FFFFFF;
   font-size: 16px;
   font-weight: bold;
   position:relative;
   overflow: hidden;
-  background: #E6E7F1;
+  background: #49c0f0;
   border-bottom: 1px solid #FFFFFF;
   height: 28px;
 }
@@ -2458,10 +2568,13 @@ label {
   background: #63CC9E;
 }
 .toggle-switch-primary input:checked + .toggle-switch-inner + .toggle-switch-switch {
-  border:2px solid #7ED261;
+border:2px solid #7ED261;
   background: #7ED261;
 }
-
+.toggle-switch-primary input + .toggle-switch-inner + .toggle-switch-switch {
+  border:2px solid red;
+  background: red;
+}
 /*datatable*/
 .btn-success, .btn-success.disabled, .btn-success[disabled], fieldset[disabled] .btn-success, .btn-success.disabled:hover, .btn-success[disabled]:hover, fieldset[disabled] .btn-success:hover, .btn-success.disabled:focus, .btn-success[disabled]:focus, fieldset[disabled] .btn-success:focus, .btn-success.disabled:active, .btn-success[disabled]:active, fieldset[disabled] .btn-success:active, .btn-success.disabled.active, .btn-success[disabled].active, fieldset[disabled] .btn-success.active, .progress-bar-success,
 .table > thead > tr > td.success, .table > tbody > tr > td.success, .table > tfoot > tr > td.success, .table > thead > tr > th.success, .table > tbody > tr > th.success, .table > tfoot > tr > th.success, .table > thead > tr.success > td, .table > tbody > tr.success > td, .table > tfoot > tr.success > td, .table > thead > tr.success > th, .table > tbody > tr.success > th, .table > tfoot > tr.success > th {
@@ -2505,7 +2618,7 @@ label {
   background-image:    -moz-linear-gradient(top, #825656, #825656);
   background-image:     -ms-linear-gradient(top, #825656, #825656);
   background-image:      -o-linear-gradient(top, #825656, #825656);
-  background-image:   linear-gradient(to bottom, #A6A7DE, #A6A7DE);
+  background-image:   linear-gradient(to bottom, #9DD1E6, #9DD1E6);
 }
 table.no-border-bottom tr:last-child td {
   border-bottom:0;
@@ -2587,9 +2700,12 @@ table.no-border-bottom tr:last-child td {
 
 #breadcrumb {
   padding: 0;
-  line-height: 40px;
-  background: #6681DE url(../img/devoops_pattern_b10.png) 0 0 repeat;
+  line-height: 42px;
+  background: #085675;
   margin-bottom: 10px;
+  font-size: 16px;
+  margin-left:0;
+  font-family: "Geneva", Helvetica, Arial, sans-serif;
 }
 .breadcrumb {
   padding: 0 15px;
@@ -2624,7 +2740,7 @@ table.no-border-bottom tr:last-child td {
     filter: alpha(opacity=0);
 }
 .tColor{
-    background: #333F73;
+    background: #085675;
 }
 .box-name{
     padding: 3px;
@@ -2637,4 +2753,32 @@ table.no-border-bottom tr:last-child td {
         position: relative;
     display: table;
     border-collapse: separate;
+}
+.btn-file {
+  position: relative;
+  overflow: hidden;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 80%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  background: red;
+  cursor: inherit;
+  display: block;
+}
+input[readonly] {
+  background-color: white !important;
+  cursor: text !important;
+}
+.uploadInput{
+    height: 30px;
+}
+.fa-search{
+    color: #FFFFFF;
 }
