--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2109,13 +2109,17 @@ th {
 .table-bordered {
   border: 1px solid #ddd;
 }
-.table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
+.table-bordered > tbody > tr > td{
+
+ 
+  border: 1px solid #A79F9F;
+}
+.table-bordered > tfoot > tr > td 
 .table-bordered > tfoot > tr > th,
 .table-bordered > thead > tr > td,
-.table-bordered > tbody > tr > td,
-.table-bordered > tfoot > tr > td {
-  border: 1px solid #A79F9F;
+.table-bordered > thead > tr > th{
+border: 1px solid #428bca;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
