--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2400,8 +2400,8 @@ label {
   position:relative;
   overflow: hidden;
   background: #49c0f0;
-  border-bottom: 1px solid #FFFFFF;
-  height: 28px;
+  border-bottom: 1px solid #49c0f0;
+  height: 32px;
 }
 
 .box-content {
@@ -2743,7 +2743,7 @@ table.no-border-bottom tr:last-child td {
     background: #085675;
 }
 .box-name{
-    padding: 3px;
+    padding: 5px;
 }
 
 .searchpanel-input-group{
